# dist_bo_turtlebot

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
dist_bo/: centralized_decision.py  client_member_function.py  consensus.py  distributed_exploration.py  distributed_exploration_real.py  launch_simulation.sh  spawn_entity.py  util_func.py  virtual_sensor.py  virtual_source_func.py  visualization.py  visualization_plain.py
dist_bo/MISSION_CONTROL/: MOVE.py
dist_bo/collision_avoidance/: obstacle_detector.py  regions.py
dist_bo/estimation/: ConsensusEKF.py  bayesian_optimization.py  ma_es.json
dist_bo/models/mobile_sensor/: model.config  model.sdf
dist_bo/motion_control/: ActionProjector.py  ControlMPC.py  SimplePositionControl.py  WaypointPlanning.py  WaypointTracking.py
dist_bo/plot/: plot_traj.ipynb
dist_bo/ros2_utils/: benchmark_functions_2D.py  misc.py  param_service_client.py  pose.py  robot_listener.py
launch/:  virtual_source_launch.py  gazebo_simulation_launch copy.py  gazebo_simulation_launch.py  my_tb3_bringup.launch.py  sbc_seeking_launch.py  simulated_distributed_seeking_launch.py  visualizer_launch.py
models/source_turtlebot/: model.config  model.sdf
param/: burger-named.yaml  burger-raw.yaml  burger.yaml
srv/: QueryVirtualFunc.srv
worlds/: empty.model
