<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dist_bo</name>
  <version>0.0.0</version>
  <description>Distributed Bayesian Optimization</description>
  <maintainer email="haitongma@g.harvard.edu">mht</maintainer>
  <license>MIT License</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>custom_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>python3-networkx</exec_depend>
  <exec_depend>python3-sklearn</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
